--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Yiminum–Wilbowe Road (3D Terrain)</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+  <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js">  map.addControl(new maplibregl.NavigationControl({ showCompass: true }), 'top-right');
+</script>
   <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
   <style>
     body { margin: 0; font-family: sans-serif; }
@@ -20,7 +21,18 @@
       font-size: 13px;
       z-index: 1;
     }
-  </style>
+  #layerControl {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 2;
+  background: white;
+  padding: 6px;
+  border-radius: 4px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
+  font-size: 13px;
+}
+</style>
 </head>
 <body>
 
@@ -33,6 +45,12 @@
   </iframe>
 </div>
 
+<div id="layerControl">
+  <label><input type="radio" name="basemap" value="hybrid" checked> Hybrid</label><br>
+  <label><input type="radio" name="basemap" value="streets"> Streets</label><br>
+  $1<br>
+  <label><input type="radio" name="basemap" value="osm"> OSM</label>
+</div>
 <div id="map"></div>
 <div id="infoBox">Distance Travelled: <span id="dist">0.00</span> km</div>
 
@@ -41,17 +59,59 @@
   let map, player, geoData = [], marker, trailLine;
   let started = false;
 
-  map = new maplibregl.Map({
-    container: 'map',
-    style: 'https://api.maptiler.com/maps/hybrid/style.json?key=HuOH81AfcUjWmWVWJ8Yn',
+  let styleUrls = {
+  osm: 'https://demotiles.maplibre.org/style.json',
+  hybrid: 'https://api.maptiler.com/maps/hybrid/style.json?key=HuOH81AfcUjWmWVWJ8Yn',
+  streets: 'https://api.maptiler.com/maps/streets/style.json?key=HuOH81AfcUjWmWVWJ8Yn',
+  satellite: 'https://api.maptiler.com/maps/satellite/style.json?key=HuOH81AfcUjWmWVWJ8Yn'
+};
+
+map = new maplibregl.Map({
+  container: 'map',
+  style: styleUrls.hybrid,
     center: [142.503768133, -3.679434133],
-    zoom: 14,
+    zoom: 13,
     pitch: 60,
     bearing: 90,
     antialias: true
   });
 
-  map.on('load', () => {
+  document.querySelectorAll('input[name="basemap"]').forEach(radio => {
+  radio.addEventListener('change', e => {
+    const selectedStyle = e.target.value;
+    map.setStyle(styleUrls[selectedStyle]);
+    map.once('style.load', () => {
+      map.setTerrain({ source: 'terrain', exaggeration: 1.2 });
+      map.addLayer({
+        id: 'sky',
+        type: 'sky',
+        paint: {
+          'sky-type': 'atmosphere',
+          'sky-atmosphere-sun': [0.0, 0.0],
+          'sky-atmosphere-sun-intensity': 15
+        }
+      });
+      map.addSource('trail', {
+        type: 'geojson',
+        data: {
+          type: 'FeatureCollection',
+          features: []
+        }
+      });
+      map.addLayer({
+        id: 'trail-line',
+        type: 'line',
+        source: 'trail',
+        paint: {
+          'line-color': '#ff0000',
+          'line-width': 4
+        }
+      });
+    });
+  });
+});
+
+map.on('load', () => {
     // Add terrain
     map.addSource('terrain', {
       type: 'raster-dem',
@@ -158,7 +218,7 @@
     // Smooth follow camera
     map.easeTo({
       center: [lon, lat],
-      zoom: 17,
+      zoom: 15,
       bearing: 90,
       pitch: 60,
       duration: 1000,
