--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@ map = new maplibregl.Map({
 });
 
 map.on('load', () => {
+  // Load photo-rich points
+  map.loadImage('https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Map_marker_icon_%E2%80%93_Nicolas_Mollet_%E2%80%93_Location_%E2%80%93_Tourism_%E2%80%93_Red.png/48px-Map_marker_icon_%E2%80%93_Nicolas_Mollet_%E2%80%93_Location_%E2%80%93_Tourism_%E2%80%93_Red.png', (error, image) => {
+    if (!error && !map.hasImage('photo-marker')) map.addImage('photo-marker', image);
+  });
     // Add terrain
     map.addSource('terrain', {
       type: 'raster-dem',
@@ -158,6 +162,32 @@ map.on('load', () => {
         geoData = data.features;
         initMarker();
         setInterval(syncWithVideo, 1000);
+      });
+
+    fetch('yiminum_wilbowe_popups.geojson')
+      .then(res => res.json())
+      .then(data => {
+        map.addSource('popups', {
+          type: 'geojson',
+          data: data
+        });
+
+        map.addLayer({
+          id: 'popup-points',
+          type: 'symbol',
+          source: 'popups',
+          layout: {
+            'icon-image': 'photo-marker',
+            'icon-size': 1,
+            'icon-allow-overlap': true
+          }
+        });
+
+        window.popupPoints = data.features.map(f => ({
+          ...f,
+          shown: false
+        }));
+      });
       });
   });
 
@@ -212,6 +242,22 @@ map.on('load', () => {
       geometry: {
         type: 'LineString',
         coordinates: trailCoords
+      }
+    });
+
+    // Trigger popups nearby
+    window.popupPoints?.forEach(p => {
+      if (!p.shown) {
+        const dx = p.geometry.coordinates[0] - lon;
+        const dy = p.geometry.coordinates[1] - lat;
+        const dist = Math.sqrt(dx * dx + dy * dy) * 111319; // deg to meters
+        if (dist < 25) {
+          new maplibregl.Popup()
+            .setLngLat(p.geometry.coordinates)
+            .setHTML(`<strong>${p.properties.name}</strong><br>${p.properties.description}`)
+            .addTo(map);
+          p.shown = true;
+        }
       }
     });
 
